Add Supabase keys — 25 OG VIP system LIVE 🔥

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-PASSWORD_COOKIE_NAME=hasAccess
-SEARCH_QUERY_NAME=password
-PAGE_PASSWORD=toppassword
+NEXT_PUBLIC_SUPABASE_URL=https://fhbippmndyeuehxpcweu.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_YpotEpinEWsC2dI7FIKI
