FINAL SUPABASE — 25 OGs CROWNED FOREVER 💀🧜‍♀️🔥

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SUPABASE_URL=https://fhbippmndyeuehxpcweu.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_YpotEpinEWsC2dI7FIKI
+NEXT_PUBLIC_SUPABASE_URL=https://kfurqafuykdplyxbaxmk.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_2f9kP8xMqR7vN4wL3tYhJ6uB9zE5rT1gV0cX
