--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "cookie": "^0.6.0",
     "next": "14.0.3",
+    "prisma": "^6.19.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "shortid": "^2.2.17",
+    "stripe": "^19.3.0"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
