NUKE VERCEL 404 — FORCE NEXT.JS APP ROUTER — THRONE ROOM LIVE FOREVER

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{ "buildCommand": "npm run build", "framework": "next", "regions": ["iad1"] } 
+{ "builds": [{ "src": "app/**", "use": "@vercel/next" }], "routes": [{ "src": "/(.*)", "dest": "/app/$1" }] } 
