--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "cookie": "^0.6.0",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
