--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,8 @@
-{ "builds": [{ "src": "app/**", "use": "@vercel/next" }], "routes": [{ "src": "/(.*)", "dest": "/app/$1" }] } 
+{
+  "builds": [
+    {
+      "src": "next.config.js",
+      "use": "@vercel/next"
+    }
+  ]
+}
