--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.4",
+    "@prisma/client": "^6.19.0",
+    "@supabase/supabase-js": "^2.80.0",
     "cookie": "^0.6.0",
     "next": "^14.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "shortid": "^2.2.17",
+    "stripe": "^19.3.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
