--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,1 @@
-"{ \"compilerOptions\": { \"baseUrl\": \".\", \"paths\": { \"@/*\": [\"./*\"] } } }" 
+{"compilerOptions":{"baseUrl":".","paths":{"@/*":["./*"]}},"include":["next-env.d.ts","**/*.ts","**/*.tsx",".next/types/**/*.ts"],"exclude":["node_modules"]} 
