FIX: Stripe checkout — 4242 → SUCCESS (terminal-only)

--- a/.env.local
+++ b/.env.local
@@ -1,13 +1,2 @@
-LEMON_SQUEEZY_STORE_ID=241244
-LEMON_SQUEEZY_WEBHOOK_SECRET=
-LEMON_SQUEEZY_API_KEY=
-NEXT_PUBLIC_LEMONSQUEEZY_STORE=sirensforge
-
-SUPABASE_URL=
-SUPABASE_ANON_KEY=
-
-CLOUDFLARE_R2_ACCOUNT_ID=
-CLOUDFLARE_R2_ACCESS_KEY_ID=
-CLOUDFLARE_R2_SECRET_ACCESS_KEY=
-CLOUDFLARE_R2_BUCKET=sirensforge-muses
-CLOUDFLARE_R2_PUBLIC_URL=https://pub-xxxxxx.r2.dev
+﻿STRIPE_SECRET_KEY=sk_test_51SRxf9FjcWRhhOnzXXXXXXXXXXXXXXXXXXXXXXXX
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_51SRxf9FjcWRhhOnzXXXXXXXXXXXXXXXXXXXXXXXX
