--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.19.0",
     "@supabase/supabase-js": "^2.80.0",
     "cookie": "^0.6.0",
+    "gray-matter": "^4.0.3",
     "next": "^14.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
