--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.80.0",
     "cookie": "^0.6.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.553.0",
     "next": "^14.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
