--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
     "@stripe/stripe-js": "^8.4.0",
     "@supabase/supabase-js": "^2.80.0",
+    "@upstash/redis": "^1.35.6",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.553.0",
     "next": "^14.0.3",
+    "next-auth": "^4.24.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "shortid": "^2.2.17",
