--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "gray-matter": "^4.0.3",
+    "instagram-private-api": "^1.46.1",
     "lucide-react": "^0.553.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.13",
@@ -31,7 +32,9 @@
     "stripe": "^19.3.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tiktok-api": "^0.4.1",
+    "twitter-api-v2": "^1.27.0"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
