LIVE: Dashboard with Recharts analytics — AI build + auto-post

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-auth": "^4.24.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.4.1",
     "shortid": "^2.2.17",
     "stripe": "^19.3.0",
     "swr": "^2.2.5",
